added Login Middleware to all the routes
